--- a/css/style.css
+++ b/css/style.css
@@ -1,11 +1,3 @@
-/******************************************************************
-  Template Name: Dreams
-  Description: Dreams wedding template
-  Author: Colorib
-  Author URI: https://colorlib.com/
-  Version: 1.0
-  Created: Colorib
-******************************************************************/
 /*------------------------------------------------------------------
 [Table of contents]
 
@@ -19,13 +11,12 @@
 4.  nav Section
 5.  Services Section
 6.  Counter Section
-7.  Team Section
-8.  Latest Section
-9.  Contact
-10.  Footer Style
+7.  Latest Section
+8.  Contact
+9.  Footer Style
 -------------------------------------------------------------------*/
 /*----------------------------------------*/
-/* Template default CSS
+/* Default CSS
 /*----------------------------------------*/
 html,
 body {
@@ -913,9 +904,6 @@ ol {
   font-size: 16px;
   color: #fff;
 }
-.footer__option__item .read__more a:hover {
-  color:#adadad;
-}
 .footer__option__item .read__more span {
   font-size: 16px;
   color: #fff;
@@ -1060,78 +1048,7 @@ ol {
   margin-top: -10px;
 }
 
-/*---------------------
-  Testimonial
------------------------*/
-.testimonial {
-  padding-bottom: 60px;
-}
 
-.testimonial__slider.owl-carousel .owl-item .col-lg-4 {
-  max-width: 100%;
-}
-.testimonial__slider.owl-carousel .owl-dots {
-  text-align: center;
-  padding-top: 35px;
-}
-.testimonial__slider.owl-carousel .owl-dots button {
-  height: 8px;
-  width: 8px;
-  background: rgba(255, 255, 255, 0.2);
-  border-radius: 50%;
-  margin-right: 10px;
-}
-.testimonial__slider.owl-carousel .owl-dots button.active {
-  background: #d4b57a;
-}
-.testimonial__slider.owl-carousel .owl-dots button:last-child {
-  margin-right: 0;
-}
-
-.testimonial__text {
-  padding: 30px 40px 25px 30px;
-  border: 1px solid #3D3A64;
-  margin-bottom: 25px;
-  position: relative;
-  z-index: 9;
-}
-.testimonial__text P {
-  color: #ffffff;
-  font-size: 18px;
-  font-weight: 300;
-  font-style: italic;
-  line-height: 30px;
-  margin-bottom: 0;
-}
-
-.testimonial__author {
-  padding-left: 30px;
-}
-
-.testimonial__author__pic {
-  float: left;
-  margin-right: 20px;
-}
-.testimonial__author__pic img {
-  height: 50px;
-  width: 50px;
-  border-radius: 50%;
-}
-
-.testimonial__author__text {
-  overflow: hidden;
-}
-.testimonial__author__text h5 {
-  color: #ffffff;
-  font-weight: 700;
-  margin-bottom: 8px;
-}
-.testimonial__author__text span {
-  color: #ffffff;
-  font-size: 14px;
-  font-weight: 300px;
-  display: inline-block;
-}
 
 /*---------------------
   Services
@@ -1351,78 +1268,7 @@ ol {
   margin-right: 6px;
 }
 
-/*---------------------
-    Blog
------------------------*/
-.blog {
-  background: #100028;
-}
 
-.blog__item {
-  border: 1px solid #222222;
-  padding: 40px 48px 35px 30px;
-  position: relative;
-  z-index: 1;
-  margin-bottom: 45px;
-}
-.blog__item:hover {
-  border: 1px solid transparent !important;
-  background: url(../img/blog/blog-2.jpg) no-repeat;
-  background-size: cover;
-}
-.blog__item:hover ul li {
-  color: #ffffff;
-}
-.blog__item:hover p {
-  color: #ffffff;
-}
-.blog__item h4 {
-  color: #ffffff;
-  font-weight: 700;
-  line-height: 31px;
-  margin-bottom: 18px;
-}
-.blog__item ul {
-  margin-bottom: 20px;
-}
-.blog__item ul li {
-  color: #777777;
-  list-style: none;
-  font-size: 14px;
-  font-weight: 300;
-  margin-right: 25px;
-  position: relative;
-  display: inline-block;
-}
-.blog__item ul li:after {
-  position: absolute;
-  right: -16px;
-  top: 0px;
-  content: "/";
-}
-.blog__item ul li:last-child {
-  margin-right: 0;
-}
-.blog__item ul li:last-child:after {
-  display: none;
-}
-.blog__item p {
-  font-weight: 300;
-  line-height: 29px;
-  margin-bottom: 22px;
-}
-.blog__item a {
-  font-size: 16px;
-  color: #ffffff;
-}
-.blog__item a span {
-  font-size: 16px;
-  color: #ffffff;
-  opacity: 0.5;
-  position: relative;
-  top: 4px;
-  margin-left: 5px;
-}
 
 /*---------------------
   Blog Details Hero
@@ -1464,223 +1310,6 @@ ol {
 }
 .blog__hero__text ul li span {
   text-transform: uppercase;
-}
-
-/*---------------------
-  Blog Details
------------------------*/
-.blog-details {
-  background: #100028;
-}
-
-.blog__details__text {
-  margin-bottom: 30px;
-}
-.blog__details__text p {
-  font-size: 18px;
-  line-height: 29px;
-  font-weight: 300;
-  margin-bottom: 20px;
-}
-.blog__details__text p:last-child {
-  margin-bottom: 0;
-}
-
-.blog__details__quote {
-  border: 1px solid rgba(225, 225, 225, 0.8);
-  padding: 35px 90px 35px 40px;
-  position: relative;
-  margin-bottom: 35px;
-}
-.blog__details__quote p {
-  font-size: 22px;
-  font-weight: 300;
-  line-height: 35px;
-  font-style: italic;
-  margin-bottom: 10px;
-}
-.blog__details__quote h6 {
-  font-size: 15px;
-  color: #adadad;
-  letter-spacing: 0.5px;
-  text-transform: uppercase;
-  color: #ffffff;
-}
-.blog__details__quote i {
-  font-size: 36px;
-  color: #d4b57a;
-  position: absolute;
-  right: 30px;
-  bottom: 25px;
-}
-
-.blog__details__desc {
-  margin-bottom: 50px;
-}
-.blog__details__desc p {
-  font-size: 18px;
-  line-height: 29px;
-  font-weight: 300;
-  margin-bottom: 20px;
-}
-.blog__details__desc p:last-child {
-  margin-bottom: 0;
-}
-
-.blog__details__tags {
-  padding-bottom: 60px;
-  border-bottom: 1px solid rgba(255, 255, 255, 0.1);
-  margin-bottom: 65px;
-}
-.blog__details__tags span {
-  display: inline-block;
-  font-size: 15px;
-  color: #ffffff;
-  font-weight: 300;
-  margin-right: 25px;
-}
-.blog__details__tags a {
-  font-size: 16px;
-  font-weight: 300;
-  color: #ffffff;
-  display: inline-block;
-  margin-right: 11px;
-  padding: 8px 15px 7px;
-  margin-bottom: 5px;
-  background: rgba(255, 255, 255, 0.1);
-}
-
-.blog__details__option {
-  margin-bottom: 40px;
-}
-
-.blog__details__option__item {
-  margin-bottom: 30px;
-  overflow: hidden;
-  display: block;
-}
-.blog__details__option__item h5 {
-  color: #ffffff;
-  font-size: 15px;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 25px;
-}
-.blog__details__option__item h5 i {
-  font-size: 18px;
-  margin-right: 5px;
-}
-.blog__details__option__item.blog__details__option__item--right h5 {
-  text-align: right;
-}
-.blog__details__option__item.blog__details__option__item--right h5 i {
-  margin-right: 0;
-  margin-left: 5px;
-}
-.blog__details__option__item.blog__details__option__item--right .blog__details__option__item__img {
-  float: right;
-  margin-right: 0;
-  margin-left: 25px;
-}
-.blog__details__option__item.blog__details__option__item--right .blog__details__option__item__text {
-  margin-right: 25px;
-  text-align: right;
-  float: none;
-}
-
-.blog__details__option__item__img {
-  float: left;
-  margin-right: 25px;
-}
-
-.blog__details__option__item__text {
-  overflow: hidden;
-}
-.blog__details__option__item__text h6 {
-  color: #ffffff;
-  line-height: 21px;
-  font-weight: 700;
-  margin-bottom: 5px;
-}
-.blog__details__option__item__text span {
-  font-size: 14px;
-  color: #777777;
-  font-weight: 300;
-}
-
-.blog__details__recent {
-  margin-bottom: 60px;
-}
-.blog__details__recent h4 {
-  color: #ffffff;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 35px;
-  text-align: center;
-}
-
-.blog__details__recent__item {
-  margin-bottom: 30px;
-}
-.blog__details__recent__item img {
-  min-width: 100%;
-  margin-bottom: 20px;
-}
-.blog__details__recent__item h5 {
-  color: #ffffff;
-  font-weight: 700;
-  line-height: 23px;
-  margin-bottom: 4px;
-}
-.blog__details__recent__item span {
-  color: #777777;
-  font-size: 14px;
-  font-weight: 300;
-}
-
-.blog__details__comment h4 {
-  color: #ffffff;
-  font-weight: 700;
-  text-transform: uppercase;
-  margin-bottom: 35px;
-  text-align: center;
-}
-.blog__details__comment form textarea {
-  height: 120px;
-  width: 100%;
-  border: 1px solid rgba(225, 225, 225, 0.5);
-  background: transparent;
-  font-size: 16px;
-  color: #adadad;
-  padding-top: 12px;
-  padding-left: 20px;
-  font-weight: 300;
-  margin-bottom: 14px;
-  resize: none;
-}
-.blog__details__comment form textarea:placeholder {
-  color: #adadad;
-}
-
-.input__list {
-  margin-right: -20px;
-  overflow: hidden;
-}
-.input__list input {
-  height: 50px;
-  width: calc(33.33% - 20px);
-  float: left;
-  border: 1px solid rgba(225, 225, 225, 0.5);
-  background: transparent;
-  font-size: 16px;
-  color: #adadad;
-  padding-left: 20px;
-  font-weight: 300;
-  margin-right: 20px;
-  margin-bottom: 20px;
-}
-.input__list input:placeholder {
-  color: #adadad;
 }
 
 /*---------------------
@@ -1876,23 +1505,6 @@ ol {
     padding-bottom: 70px;
   }
 
-  .team__item.team__item--second {
-    margin-top: 0;
-  }
-
-  .team__item.team__item--third {
-    margin-top: 0;
-  }
-
-  .team__item.team__item--four {
-    margin-top: 0;
-  }
-
-  .team__btn {
-    position: relative;
-    padding-top: 50px;
-  }
-
   .about__pic {
     margin-bottom: 50px;
   }
@@ -1995,23 +1607,6 @@ ol {
     height: auto;
     padding-top: 100px;
     padding-bottom: 70px;
-  }
-
-  .team__item.team__item--second {
-    margin-top: 0;
-  }
-
-  .team__item.team__item--third {
-    margin-top: 0;
-  }
-
-  .team__item.team__item--four {
-    margin-top: 0;
-  }
-
-  .team__btn {
-    position: relative;
-    padding-top: 50px;
   }
 
   .about__pic {
@@ -2120,20 +1715,8 @@ ol {
     margin-bottom: 40px;
   }
 
-  .team__item {
-    margin-bottom: 20px;
-  }
-
-  .team .p-0 {
-    padding: 0 15px !important;
-  }
-
   .about__pic__item {
     margin-right: 0;
-  }
-
-  .blog__details__quote {
-    padding: 30px 45px 35px 35px;
   }
 }
 /* Small Device = 320px */
@@ -2170,9 +1753,5 @@ ol {
 
   .pagination__option .arrow__pagination.right__arrow {
     margin-left: 10px;
-  }
-
-  .blog__details__quote {
-    padding: 30px 40px 35px 35px;
   }
 }
