--- a/css/vendor.css
+++ b/css/vendor.css
@@ -28,6 +28,11 @@ body[data-aos-delay='50'] [data-aos] {
   transition-delay: 0;
 }
 
+[data-aos][data-aos][data-aos-delay='50'].aos-animate,
+body[data-aos-delay='50'] [data-aos].aos-animate {
+  transition-delay: 50ms;
+}
+
 [data-aos][data-aos][data-aos-duration='100'],
 body[data-aos-duration='100'] [data-aos] {
   transition-duration: .1s;
@@ -36,6 +41,11 @@ body[data-aos-duration='100'] [data-aos] {
 [data-aos][data-aos][data-aos-delay='100'],
 body[data-aos-delay='100'] [data-aos] {
   transition-delay: 0;
+}
+
+[data-aos][data-aos][data-aos-delay='100'].aos-animate,
+body[data-aos-delay='100'] [data-aos].aos-animate {
+  transition-delay: .1s;
 }
 
 [data-aos][data-aos][data-aos-duration='150'],
@@ -48,6 +58,11 @@ body[data-aos-delay='150'] [data-aos] {
   transition-delay: 0;
 }
 
+[data-aos][data-aos][data-aos-delay='150'].aos-animate,
+body[data-aos-delay='150'] [data-aos].aos-animate {
+  transition-delay: .15s;
+}
+
 [data-aos][data-aos][data-aos-duration='200'],
 body[data-aos-duration='200'] [data-aos] {
   transition-duration: .2s;
@@ -56,6 +71,11 @@ body[data-aos-duration='200'] [data-aos] {
 [data-aos][data-aos][data-aos-delay='200'],
 body[data-aos-delay='200'] [data-aos] {
   transition-delay: 0;
+}
+
+[data-aos][data-aos][data-aos-delay='200'].aos-animate,
+body[data-aos-delay='200'] [data-aos].aos-animate {
+  transition-delay: .2s;
 }
 
 [data-aos][data-aos][data-aos-duration='250'],
@@ -68,6 +88,11 @@ body[data-aos-delay='250'] [data-aos] {
   transition-delay: 0;
 }
 
+[data-aos][data-aos][data-aos-delay='250'].aos-animate,
+body[data-aos-delay='250'] [data-aos].aos-animate {
+  transition-delay: .25s;
+}
+
 [data-aos][data-aos][data-aos-duration='300'],
 body[data-aos-duration='300'] [data-aos] {
   transition-duration: .3s;
@@ -76,6 +101,11 @@ body[data-aos-duration='300'] [data-aos] {
 [data-aos][data-aos][data-aos-delay='300'],
 body[data-aos-delay='300'] [data-aos] {
   transition-delay: 0;
+}
+
+[data-aos][data-aos][data-aos-delay='300'].aos-animate,
+body[data-aos-delay='300'] [data-aos].aos-animate {
+  transition-delay: .3s;
 }
 
 [data-aos][data-aos][data-aos-duration='350'],
@@ -88,6 +118,11 @@ body[data-aos-delay='350'] [data-aos] {
   transition-delay: 0;
 }
 
+[data-aos][data-aos][data-aos-delay='350'].aos-animate,
+body[data-aos-delay='350'] [data-aos].aos-animate {
+  transition-delay: .35s;
+}
+
 [data-aos][data-aos][data-aos-duration='400'],
 body[data-aos-duration='400'] [data-aos] {
   transition-duration: .4s;
@@ -96,6 +131,11 @@ body[data-aos-duration='400'] [data-aos] {
 [data-aos][data-aos][data-aos-delay='400'],
 body[data-aos-delay='400'] [data-aos] {
   transition-delay: 0;
+}
+
+[data-aos][data-aos][data-aos-delay='400'].aos-animate,
+body[data-aos-delay='400'] [data-aos].aos-animate {
+  transition-delay: .4s;
 }
 
 [data-aos][data-aos][data-aos-duration='450'],
@@ -108,6 +148,11 @@ body[data-aos-delay='450'] [data-aos] {
   transition-delay: 0;
 }
 
+[data-aos][data-aos][data-aos-delay='450'].aos-animate,
+body[data-aos-delay='450'] [data-aos].aos-animate {
+  transition-delay: .45s;
+}
+
 [data-aos][data-aos][data-aos-duration='500'],
 body[data-aos-duration='500'] [data-aos] {
   transition-duration: .5s;
@@ -116,6 +161,11 @@ body[data-aos-duration='500'] [data-aos] {
 [data-aos][data-aos][data-aos-delay='500'],
 body[data-aos-delay='500'] [data-aos] {
   transition-delay: 0;
+}
+
+[data-aos][data-aos][data-aos-delay='500'].aos-animate,
+body[data-aos-delay='500'] [data-aos].aos-animate {
+  transition-delay: .5s;
 }
 
 [data-aos][data-aos][data-aos-duration='550'],
@@ -128,6 +178,11 @@ body[data-aos-delay='550'] [data-aos] {
   transition-delay: 0;
 }
 
+[data-aos][data-aos][data-aos-delay='550'].aos-animate,
+body[data-aos-delay='550'] [data-aos].aos-animate {
+  transition-delay: .55s;
+}
+
 [data-aos][data-aos][data-aos-duration='600'],
 body[data-aos-duration='600'] [data-aos] {
   transition-duration: .6s;
@@ -136,6 +191,11 @@ body[data-aos-duration='600'] [data-aos] {
 [data-aos][data-aos][data-aos-delay='600'],
 body[data-aos-delay='600'] [data-aos] {
   transition-delay: 0;
+}
+
+[data-aos][data-aos][data-aos-delay='600'].aos-animate,
+body[data-aos-delay='600'] [data-aos].aos-animate {
+  transition-delay: .6s;
 }
 
 [data-aos][data-aos][data-aos-duration='650'],
@@ -148,6 +208,11 @@ body[data-aos-delay='650'] [data-aos] {
   transition-delay: 0;
 }
 
+[data-aos][data-aos][data-aos-delay='650'].aos-animate,
+body[data-aos-delay='650'] [data-aos].aos-animate {
+  transition-delay: .65s;
+}
+
 [data-aos][data-aos][data-aos-duration='700'],
 body[data-aos-duration='700'] [data-aos] {
   transition-duration: .7s;
@@ -156,6 +221,11 @@ body[data-aos-duration='700'] [data-aos] {
 [data-aos][data-aos][data-aos-delay='700'],
 body[data-aos-delay='700'] [data-aos] {
   transition-delay: 0;
+}
+
+[data-aos][data-aos][data-aos-delay='700'].aos-animate,
+body[data-aos-delay='700'] [data-aos].aos-animate {
+  transition-delay: .7s;
 }
 
 [data-aos][data-aos][data-aos-duration='750'],
@@ -168,6 +238,11 @@ body[data-aos-delay='750'] [data-aos] {
   transition-delay: 0;
 }
 
+[data-aos][data-aos][data-aos-delay='750'].aos-animate,
+body[data-aos-delay='750'] [data-aos].aos-animate {
+  transition-delay: .75s;
+}
+
 [data-aos][data-aos][data-aos-duration='800'],
 body[data-aos-duration='800'] [data-aos] {
   transition-duration: .8s;
@@ -176,6 +251,11 @@ body[data-aos-duration='800'] [data-aos] {
 [data-aos][data-aos][data-aos-delay='800'],
 body[data-aos-delay='800'] [data-aos] {
   transition-delay: 0;
+}
+
+[data-aos][data-aos][data-aos-delay='800'].aos-animate,
+body[data-aos-delay='800'] [data-aos].aos-animate {
+  transition-delay: .8s;
 }
 
 [data-aos][data-aos][data-aos-duration='850'],
@@ -188,6 +268,11 @@ body[data-aos-delay='850'] [data-aos] {
   transition-delay: 0;
 }
 
+[data-aos][data-aos][data-aos-delay='850'].aos-animate,
+body[data-aos-delay='850'] [data-aos].aos-animate {
+  transition-delay: .85s;
+}
+
 [data-aos][data-aos][data-aos-duration='900'],
 body[data-aos-duration='900'] [data-aos] {
   transition-duration: .9s;
@@ -196,6 +281,11 @@ body[data-aos-duration='900'] [data-aos] {
 [data-aos][data-aos][data-aos-delay='900'],
 body[data-aos-delay='900'] [data-aos] {
   transition-delay: 0;
+}
+
+[data-aos][data-aos][data-aos-delay='900'].aos-animate,
+body[data-aos-delay='900'] [data-aos].aos-animate {
+  transition-delay: .9s;
 }
 
 [data-aos][data-aos][data-aos-duration='950'],
@@ -208,6 +298,11 @@ body[data-aos-delay='950'] [data-aos] {
   transition-delay: 0;
 }
 
+[data-aos][data-aos][data-aos-delay='950'].aos-animate,
+body[data-aos-delay='950'] [data-aos].aos-animate {
+  transition-delay: .95s;
+}
+
 [data-aos][data-aos][data-aos-duration='1000'],
 body[data-aos-duration='1000'] [data-aos] {
   transition-duration: 1s;
@@ -216,6 +311,11 @@ body[data-aos-duration='1000'] [data-aos] {
 [data-aos][data-aos][data-aos-delay='1000'],
 body[data-aos-delay='1000'] [data-aos] {
   transition-delay: 0;
+}
+
+[data-aos][data-aos][data-aos-delay='1000'].aos-animate,
+body[data-aos-delay='1000'] [data-aos].aos-animate {
+  transition-delay: 1s;
 }
 
 [data-aos][data-aos][data-aos-duration='1050'],
@@ -228,6 +328,11 @@ body[data-aos-delay='1050'] [data-aos] {
   transition-delay: 0;
 }
 
+[data-aos][data-aos][data-aos-delay='1050'].aos-animate,
+body[data-aos-delay='1050'] [data-aos].aos-animate {
+  transition-delay: 1.05s;
+}
+
 [data-aos][data-aos][data-aos-duration='1100'],
 body[data-aos-duration='1100'] [data-aos] {
   transition-duration: 1.1s;
@@ -236,6 +341,11 @@ body[data-aos-duration='1100'] [data-aos] {
 [data-aos][data-aos][data-aos-delay='1100'],
 body[data-aos-delay='1100'] [data-aos] {
   transition-delay: 0;
+}
+
+[data-aos][data-aos][data-aos-delay='1100'].aos-animate,
+body[data-aos-delay='1100'] [data-aos].aos-animate {
+  transition-delay: 1.1s;
 }
 
 [data-aos][data-aos][data-aos-duration='1150'],
@@ -248,6 +358,11 @@ body[data-aos-delay='1150'] [data-aos] {
   transition-delay: 0;
 }
 
+[data-aos][data-aos][data-aos-delay='1150'].aos-animate,
+body[data-aos-delay='1150'] [data-aos].aos-animate {
+  transition-delay: 1.15s;
+}
+
 [data-aos][data-aos][data-aos-duration='1200'],
 body[data-aos-duration='1200'] [data-aos] {
   transition-duration: 1.2s;
@@ -256,6 +371,11 @@ body[data-aos-duration='1200'] [data-aos] {
 [data-aos][data-aos][data-aos-delay='1200'],
 body[data-aos-delay='1200'] [data-aos] {
   transition-delay: 0;
+}
+
+[data-aos][data-aos][data-aos-delay='1200'].aos-animate,
+body[data-aos-delay='1200'] [data-aos].aos-animate {
+  transition-delay: 1.2s;
 }
 
 [data-aos][data-aos][data-aos-duration='1250'],
@@ -268,6 +388,11 @@ body[data-aos-delay='1250'] [data-aos] {
   transition-delay: 0;
 }
 
+[data-aos][data-aos][data-aos-delay='1250'].aos-animate,
+body[data-aos-delay='1250'] [data-aos].aos-animate {
+  transition-delay: 1.25s;
+}
+
 [data-aos][data-aos][data-aos-duration='1300'],
 body[data-aos-duration='1300'] [data-aos] {
   transition-duration: 1.3s;
@@ -276,6 +401,11 @@ body[data-aos-duration='1300'] [data-aos] {
 [data-aos][data-aos][data-aos-delay='1300'],
 body[data-aos-delay='1300'] [data-aos] {
   transition-delay: 0;
+}
+
+[data-aos][data-aos][data-aos-delay='1300'].aos-animate,
+body[data-aos-delay='1300'] [data-aos].aos-animate {
+  transition-delay: 1.3s;
 }
 
 [data-aos][data-aos][data-aos-duration='1350'],
@@ -288,6 +418,11 @@ body[data-aos-delay='1350'] [data-aos] {
   transition-delay: 0;
 }
 
+[data-aos][data-aos][data-aos-delay='1350'].aos-animate,
+body[data-aos-delay='1350'] [data-aos].aos-animate {
+  transition-delay: 1.35s;
+}
+
 [data-aos][data-aos][data-aos-duration='1400'],
 body[data-aos-duration='1400'] [data-aos] {
   transition-duration: 1.4s;
@@ -296,6 +431,11 @@ body[data-aos-duration='1400'] [data-aos] {
 [data-aos][data-aos][data-aos-delay='1400'],
 body[data-aos-delay='1400'] [data-aos] {
   transition-delay: 0;
+}
+
+[data-aos][data-aos][data-aos-delay='1400'].aos-animate,
+body[data-aos-delay='1400'] [data-aos].aos-animate {
+  transition-delay: 1.4s;
 }
 
 [data-aos][data-aos][data-aos-duration='1450'],
@@ -308,6 +448,11 @@ body[data-aos-delay='1450'] [data-aos] {
   transition-delay: 0;
 }
 
+[data-aos][data-aos][data-aos-delay='1450'].aos-animate,
+body[data-aos-delay='1450'] [data-aos].aos-animate {
+  transition-delay: 1.45s;
+}
+
 [data-aos][data-aos][data-aos-duration='1500'],
 body[data-aos-duration='1500'] [data-aos] {
   transition-duration: 1.5s;
@@ -316,6 +461,11 @@ body[data-aos-duration='1500'] [data-aos] {
 [data-aos][data-aos][data-aos-delay='1500'],
 body[data-aos-delay='1500'] [data-aos] {
   transition-delay: 0;
+}
+
+[data-aos][data-aos][data-aos-delay='1500'].aos-animate,
+body[data-aos-delay='1500'] [data-aos].aos-animate {
+  transition-delay: 1.5s;
 }
 
 [data-aos][data-aos][data-aos-duration='1550'],
@@ -1464,7 +1614,6 @@ over element that should close gallery
 .pswp__button--zoom {
   display: none;
   background-position: -88px 0;
-  color: white;
 }
 
 .pswp--zoom-allowed .pswp__button--zoom {
@@ -1507,7 +1656,7 @@ Arrow buttons hit area
 .pswp__button--arrow--right:before {
   content: '';
   top: 0;
-  background-color: rgba(255, 255, 255, 0.3);
+  background-color: rgba(0, 0, 0, 0.3);
   height: 30px;
   width: 32px;
   position: absolute;
@@ -1537,7 +1686,7 @@ Arrow buttons hit area
 
 .pswp__share-modal {
   display: block;
-  background: rgba(255, 255, 255, 0.5);
+  background: rgba(0, 0, 0, 0.5);
   width: 100%;
   height: 100%;
   top: 0;
@@ -1565,8 +1714,8 @@ Arrow buttons hit area
   display: block;
   width: auto;
   right: 44px;
-  -webkit-box-shadow: 0 2px 5px rgba(255, 255, 255, 0.25);
-  box-shadow: 0 2px 5px rgba(255, 255, 255, 0.25);
+  -webkit-box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.25);
   -webkit-transform: translateY(6px);
   -ms-transform: translateY(6px);
   transform: translateY(6px);
